fixed 1 over issue with max size of charcorrupt dataset

--- a/A5/src/.vscode/launch.json
+++ b/A5/src/.vscode/launch.json
@@ -33,7 +33,7 @@
             "name": "vanilla_finetune_without_pretrain",
             "type": "python",
             "request": "launch",
-            "program": "c:\\git\\xcs224n\\A5\\src\\submission\\run.py",
+            "program": "c:\\git\\xcs224n\\A5\\src\\run.py",
             "args": ["--function=finetune", "--variant=vanilla", "--pretrain_corpus_path=./data/wiki.txt", "--writing_params_path=./submission/vanilla.model.params", "--finetune_corpus_path=./data/birth_places_train.tsv"],
             "console": "integratedTerminal",
             "justMyCode": true
@@ -42,7 +42,7 @@
             "name": "vanilla_eval_dev_without_pretrain",
             "type": "python",
             "request": "launch",
-            "program": "c:\\git\\xcs224n\\A5\\src\\submission\\run.py",
+            "program": "c:\\git\\xcs224n\\A5\\src\\run.py",
             "args": ["--function=evaluate", "--variant=vanilla", "--pretrain_corpus_path=./data/wiki.txt", "--reading_params_path=./submission/vanilla.model.params", "--eval_corpus_path=./data/birth_dev.tsv", "--outputs_path=./submission/vanilla.nopretrain.dev.predictions"],
             "console": "integratedTerminal",
             "justMyCode": true
@@ -51,7 +51,7 @@
             "name": "vanilla_eval_test_without_pretrain",
             "type": "python",
             "request": "launch",
-            "program": "c:\\git\\xcs224n\\A5\\src\\submission\\run.py",
+            "program": "c:\\git\\xcs224n\\A5\\src\\run.py",
             "args": ["--function=evaluate", "--variant=vanilla", "--pretrain_corpus_path=./data/wiki.txt", "--reading_params_path=./submission/vanilla.model.params", "--eval_corpus_path=./data/birth_test_inputs.tsv", "--outputs_path=./submission/vanilla.nopretrain.test.predictions"],
             "console": "integratedTerminal",
             "justMyCode": true
@@ -60,7 +60,7 @@
             "name": "vanilla_pretrain",
             "type": "python",
             "request": "launch",
-            "program": "c:\\git\\xcs224n\\A5\\src\\submission\\run.py",
+            "program": "c:\\git\\xcs224n\\A5\\src\\run.py",
             "args": ["--function=pretrain", "--variant=vanilla", "--pretrain_corpus_path=./data/wiki.txt", "--writing_params_path=./submission/vanilla.pretrain.params"],
             "console": "integratedTerminal",
             "justMyCode": true
@@ -69,7 +69,7 @@
             "name": "vanilla_finetune_with_pretrain",
             "type": "python",
             "request": "launch",
-            "program": "c:\\git\\xcs224n\\A5\\src\\submission\\run.py",
+            "program": "c:\\git\\xcs224n\\A5\\src\\run.py",
             "args": ["--function=finetune", "--variant=vanilla", "--pretrain_corpus_path=./data/wiki.txt", "--reading_params_path=./submission/vanilla.pretrain.params", "--writing_params_path=./submission/vanilla.finetune.params", "--finetune_corpus_path=./data/birth_places_train.tsv"],
             "console": "integratedTerminal",
             "justMyCode": true
@@ -78,7 +78,7 @@
             "name": "vanilla_eval_dev_with_pretrain",
             "type": "python",
             "request": "launch",
-            "program": "c:\\git\\xcs224n\\A5\\src\\submission\\run.py",
+            "program": "c:\\git\\xcs224n\\A5\\src\\run.py",
             "args": ["--function=evaluate", "--variant=vanilla", "--pretrain_corpus_path=./data/wiki.txt", "--reading_params_path=./submission/vanilla.finetune.params", "--eval_corpus_path=./data/birth_dev.tsv", "--outputs_path=./submission/vanilla.pretrain.dev.predictions"],
             "console": "integratedTerminal",
             "justMyCode": true
@@ -87,7 +87,7 @@
             "name": "vanilla_eval_test_with_pretrain",
             "type": "python",
             "request": "launch",
-            "program": "c:\\git\\xcs224n\\A5\\src\\submission\\run.py",
+            "program": "c:\\git\\xcs224n\\A5\\src\\run.py",
             "args": ["--function=evaluate", "--variant=vanilla", "--pretrain_corpus_path=./data/wiki.txt", "--reading_params_path=./submission/vanilla.finetune.params", "--eval_corpus_path=./data/birth_test_inputs.tsv", "--outputs_path=./submission/vanilla.pretrain.test.predictions"],
             "console": "integratedTerminal",
             "justMyCode": true
@@ -96,7 +96,7 @@
             "name": "synthesizer_pretrain",
             "type": "python",
             "request": "launch",
-            "program": "c:\\git\\xcs224n\\A5\\src\\submission\\run.py",
+            "program": "c:\\git\\xcs224n\\A5\\src\\run.py",
             "args": ["--function=pretrain", "--variant=synthesizer", "--pretrain_corpus_path=./data/wiki.txt", "--writing_params_path=./submission/synthesizer.pretrain.params"],
             "console": "integratedTerminal",
             "justMyCode": true
@@ -105,7 +105,7 @@
             "name": "synthesizer_finetune_with_pretrain",
             "type": "python",
             "request": "launch",
-            "program": "c:\\git\\xcs224n\\A5\\src\\submission\\run.py",
+            "program": "c:\\git\\xcs224n\\A5\\src\\run.py",
             "args": ["--function=finetune", "--variant=synthesizer", "--pretrain_corpus_path=./data/wiki.txt", "--reading_params_path=./submission/synthesizer.pretrain.params", "--writing_params_path=./submission/synthesizer.finetune.params", "--finetune_corpus_path=./data/birth_places_train.tsv"],
             "console": "integratedTerminal",
             "justMyCode": true
@@ -114,7 +114,7 @@
             "name": "synthesizer_eval_dev_with_pretrain",
             "type": "python",
             "request": "launch",
-            "program": "c:\\git\\xcs224n\\A5\\src\\submission\\run.py",
+            "program": "c:\\git\\xcs224n\\A5\\src\\run.py",
             "args": ["--function=evaluate", "--variant=synthesizer", "--pretrain_corpus_path=./data/wiki.txt", "--reading_params_path=./submission/synthesizer.finetune.params", "--eval_corpus_path=./data/birth_dev.tsv", "--outputs_path=./submission/synthesizer.pretrain.dev.predictions"],
             "console": "integratedTerminal",
             "justMyCode": true
@@ -123,7 +123,7 @@
             "name": "synthesizer_eval_test_with_pretrain",
             "type": "python",
             "request": "launch",
-            "program": "c:\\git\\xcs224n\\A5\\src\\submission\\run.py",
+            "program": "c:\\git\\xcs224n\\A5\\src\\run.py",
             "args": ["--function=evaluate", "--variant=synthesizer", "--pretrain_corpus_path=./data/wiki.txt", "--reading_params_path=./submission/synthesizer.finetune.params", "--eval_corpus_path=./data/birth_test_inputs.tsv", "--outputs_path=./submission/synthesizer.pretrain.test.predictions"],
             "console": "integratedTerminal",
             "justMyCode": true
